Lang_46/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Lang_46_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:334: error: cannot find symbol
      String string0 = StringEscapeUtils.escapeCsv("lfloor");
                                        ^
  symbol:   method escapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:341: error: cannot find symbol
      StringEscapeUtils.escapeCsv((Writer) stringWriter0, (String) null);
                       ^
  symbol:   method escapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:348: error: cannot find symbol
      StringEscapeUtils.escapeCsv((Writer) stringWriter0, "");
                       ^
  symbol:   method escapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:354: error: cannot find symbol
      String string0 = StringEscapeUtils.escapeCsv("_\"* AK[>j,<-4z{U");
                                        ^
  symbol:   method escapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:360: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("\" q-{\r\nv|\b\"");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:367: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv((String) null);
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:374: error: cannot find symbol
      StringEscapeUtils.unescapeCsv((Writer) stringWriter0, (String) null);
                       ^
  symbol:   method unescapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:380: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("'");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:386: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv(" \t\r\n\b");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:392: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("\"#'e8");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/3/org/apache/commons/lang/StringEscapeUtils_ESTest.java:398: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("\"f:ia.ge]=tT*ek(1W\"");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
11 errors
